samples/_failures_safe/1761044517_e638c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf2bdb55.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_cf2bdb55.c:183:13: error: expected expression at end of input
  183 |             printf("Vertex %d: %d\n",
      |             ^~~~~~
./samples/SAFE/__tmp_cf2bdb55.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cf2bdb55.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cf2bdb55.c:183:13: error: expected declaration or statement at end of input
